--- a/package.json
+++ b/package.json
@@ -4,9 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch",
-    "test:browser": "concurrently \"live-server ./jest_html_reporters.html\" \"live-server ./coverage/lcov-report/.\"",
-    "compile": "tsc"
+    "test": "jest",
+    "test:watch": "jest --watchAll",
+    "lint": "eslint src __tests__",
+    "compile:watch": "tsc --watch --incremental --noEmit",
+    "compile": "tsc",
+    "watch": "nodemon --ext ts,js,json,properties --exec",
+    "prepare": "concurrently \"npm test\" \"npm run lint\" && tsc"
   },
   "keywords": [],
   "author": "",
@@ -16,6 +20,7 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.13",
+    "@types/lodash": "^4.14.162",
     "@types/node-sql-parser": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^3.10.1",
@@ -29,15 +34,13 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest": "^26.4.2",
     "jest-html-reporters": "^2.0.4",
+    "jest-silent-reporter": "^0.2.1",
+    "jest-simple-dot-reporter": "^1.0.5",
     "live-server": "^1.2.1",
+    "nodemon": "^2.0.6",
     "prettier": "^2.1.1",
     "ts-node": "^9.0.0",
     "typescript": "^4.0.2"
   },
-  "dependencies": {
-    "handlebars": "^4.7.6",
-    "knex": "^0.21.5",
-    "node-sql-parser": "^3.1.0",
-    "winston": "^3.3.3"
-  }
+  "dependencies": {}
 }
