--- a/package.json
+++ b/package.json
@@ -9,8 +9,7 @@
     "lint": "eslint src __tests__",
     "compile:watch": "npx tsc --build __tests__/tsconfig.json --watch",
     "compile": "tsc",
-    "prepare": "npm run compile",
-    "prepublish": "npm run test && npm run lint"
+    "prepare": "npm run compile"
   },
   "keywords": [],
   "author": "",
@@ -20,12 +19,9 @@
     "@babel/preset-env": "^7.11.0",
     "@babel/preset-typescript": "^7.10.4",
     "@types/jest": "^26.0.13",
-    "@types/lodash": "^4.14.162",
-    "@types/node-sql-parser": "^1.1.0",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^3.10.1",
     "babel-jest": "^26.3.0",
-    "concurrently": "^5.3.0",
     "eslint": "^7.7.0",
     "eslint-config-airbnb-typescript": "^10.0.0",
     "eslint-config-prettier": "^6.11.0",
@@ -37,9 +33,7 @@
     "jest-silent-reporter": "^0.2.1",
     "jest-simple-dot-reporter": "^1.0.5",
     "live-server": "^1.2.1",
-    "nodemon": "^2.0.6",
-    "prettier": "^2.1.1",
-    "ts-node": "^9.0.0",
+    "prettier": "^2.1.2",
     "typescript": "^4.0.2"
   },
   "dependencies": {}
