--- a/package.json
+++ b/package.json
@@ -15,9 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.11.4",
-    "@babel/preset-env": "^7.11.0",
-    "@babel/preset-typescript": "^7.10.4",
+    "@shelf/jest-mongodb": "^1.2.3",
     "@types/jest": "^26.0.13",
     "@typescript-eslint/eslint-plugin": "^4.1.1",
     "@typescript-eslint/parser": "^3.10.1",
@@ -25,12 +23,19 @@
     "eslint": "^7.7.0",
     "eslint-config-airbnb-typescript": "^10.0.0",
     "eslint-config-prettier": "^6.11.0",
+    "eslint-import-resolver-typescript": "^2.3.0",
     "eslint-plugin-import": "^2.22.0",
     "eslint-plugin-only-warn": "^1.0.2",
     "eslint-plugin-prettier": "^3.1.4",
+    "jest-spec-reporter": "^1.0.14",
     "jest": "^26.4.2",
-    "prettier": "^2.1.2",
-    "typescript": "^4.0.2"
+    "prettier": "^2.1.2"
   },
-  "dependencies": {}
+  "dependencies": {
+    "@babel/core": "^7.11.4",
+    "@babel/preset-env": "^7.11.0",
+    "@babel/preset-typescript": "^7.10.4",
+    "lodash": "^4.17.20",
+    "typescript": "^4.0.2"
+  }
 }
