--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "eslint src __tests__",
     "compile:watch": "npx tsc --build __tests__/tsconfig.json --watch",
     "compile": "tsc",
-    "prepare": "npm run compile"
+    "install": "npm run compile"
   },
   "keywords": [],
   "author": "",
@@ -29,13 +29,12 @@
     "eslint-plugin-prettier": "^3.1.4",
     "jest-spec-reporter": "^1.0.14",
     "jest": "^26.4.2",
-    "prettier": "^2.1.2"
-  },
-  "dependencies": {
+    "prettier": "^2.1.2",
     "@babel/core": "^7.11.4",
     "@babel/preset-env": "^7.11.0",
-    "@babel/preset-typescript": "^7.10.4",
-    "lodash": "^4.17.20",
+    "@babel/preset-typescript": "^7.10.4"
+  },
+  "dependencies": {
     "typescript": "^4.0.2"
   }
 }
